--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>jc-starter</title>
+    <title>vue2-starter</title>
   </head>
   <body>
     <div id="app"></div>
