--- a/template/src/assets/styles/base.pcss
+++ b/template/src/assets/styles/base.pcss
@@ -7,14 +7,13 @@ a, abbr, address, article, aside, audio, b, blockquote, body, caption, cite, cod
   list-style: none;
 }
 body {
-  width: 100%;
-  height: 100%;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-text-size-adjust:none;
   -webkit-overflow-scrolling: touch;
-  font: 16px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font: 16px "Open Sans", "Helvetica Neue",'Avenir', Helvetica, Arial, sans-serif;
 }
 table {
   border-collapse: collapse;
@@ -22,6 +21,6 @@ table {
 }
 
 th, td, caption {
-  vertical-align: top;
-  text-align: left
+  vertical-align: middle;
+  text-align: center;
 }
