by taoqili init

--- a/template/src/assets/styles/base.pcss
+++ b/template/src/assets/styles/base.pcss
@@ -20,7 +20,15 @@ table {
   border-spacing: 0
 }
 
-th, td, caption {
+th, td, caption, button {
   vertical-align: middle;
   text-align: center;
+}
+input, button {
+  appearance: none;
+  background-color: #fff;
+  background-image: none;
+  outline: none;
+  -webkit-rtl-ordering: logical;
+  user-select: text;
 }
