by taoqili 管理系统初始化

--- a/template/src/pages/index/children/home/index.pcss
+++ b/template/src/pages/index/children/home/index.pcss
@@ -1,22 +1,5 @@
 .home-wrapper {
   text-align: center;
   line-height: 1.5;
-  .info {
-    margin: 50px 0;
-  }
-  .logout {
-    margin: 20px;
-    button {
-      border: 1px solid #eee;
-      border-radius: 5px;
-      color: #42b983;
-      cursor: pointer;
-      &:hover {
-        color: green;
-      }
-    }
-  }
-  .grey{
-    color: grey;
-  }
+  margin-top: 50px;
 }
