by taoqili 管理系统初始化

--- a/template/src/assets/styles/base.pcss
+++ b/template/src/assets/styles/base.pcss
@@ -5,6 +5,7 @@ a, abbr, address, article, aside, audio, b, blockquote, body, caption, cite, cod
   padding: 0;
   font-weight: normal;
   list-style: none;
+  text-decoration: none;
 }
 body {
   -webkit-user-select: none;
