--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Vue2-Starter(V2S)</title>
+    <title><%=htmlWebpackPlugin.options.appName %></title>
     <% if (htmlWebpackPlugin.options.appType === 'mobile') { %>
       <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,shrink-to-fit=no,user-scalable=no,minimal-ui"
             name="viewport"/>
