--- a/template/src/pages/index/children/home/home.pcss
+++ b/template/src/pages/index/children/home/home.pcss
@@ -1,5 +1,13 @@
 .home-wrapper {
-  text-align: center;
-  line-height: 1.5;
-  margin-top: 50px;
+  margin: 20px;
+  .desc {
+    line-height: 1.8;
+    font-size: 14px;
+    .title {
+      border-bottom: 1px solid #ddd;
+      line-height: 2;
+      font-size: 20px;
+    }
+    margin-bottom: 10px;
+  }
 }
