--- a/template/src/pages/index/children/home/home.pcss
+++ b/template/src/pages/index/children/home/home.pcss
@@ -1,3 +1,15 @@
 .home-wrapper {
-  line-height: 2;
+  h1 {
+    line-height: 3;
+    border-bottom: 1px solid #ddd;
+    font-size: 18px;
+  }
+  .content {
+    font-size: 12px;
+    line-height: 2;
+    .title {
+      font-size: 16px;
+      line-height: 3;
+    }
+  }
 }
