引入flexible布局 去除sprites

--- a/template/src/common/assets/styles/base.pcss
+++ b/template/src/common/assets/styles/base.pcss
@@ -15,6 +15,10 @@ body {
   -webkit-overflow-scrolling: touch;
   -webkit-font-smoothing: antialiased;
   font: 16px "Open Sans", "Helvetica Neue",'Avenir', Helvetica, Arial, sans-serif;
+  padding-top: constant(safe-area-inset-top);
+  padding-left: constant(safe-area-inset-left);
+  padding-right: constant(safe-area-inset-right);
+  padding-bottom: constant(safe-area-inset-bottom);
 }
 table {
   border-collapse: collapse;
